prevent text wrap in select2 and reduce padding, fixes #8005

--- a/resources/assets/stylesheets/less/selects.less
+++ b/resources/assets/stylesheets/less/selects.less
@@ -158,6 +158,13 @@ select {
         max-height: 40vh;
     }
 
+    .select2-results__option {
+        overflow: hidden;
+        padding: 3px 6px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
     &.select2-container--open {
         .select2-selection--single,
         .select2-selection--multiple {
